TestCases/ASTTests/SyntaxErrorTests/tests/test32.c
#include <stdio.h>

printf("%d", 1);    // also stopped by the grammar

int main(){
    return 0;
}